carte mise a jour

--- a/index.html
+++ b/index.html
@@ -103,25 +103,23 @@
         <!-- ANKI -->
             <div class="block" id="blockAnki">
                 <h1>Carte AMPCR</h1>
-                <h3 for="note">Devine la réponse</h3>
-                <div class="info">
-
-                    <div class="infodiv">
-                        <div id="rendu">
+                <h3 >Devine la réponse</h3>
+                <h3 >Appuie sur la carte pour voir la réponse</h3>
+                <div class="infoAnki">
+                    <div class="carteBlock" id="carteBlock">
+                        <div class="carte" id="carte">
+                            <div class="carteUp" id="action">
+                                <div id="rendu" >
+                                </div>
+                            </div>
+                            <div class="carteDown">
+                                <div id="reponse">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="info">
-                    <button id="action">voir la réponse</button>
-                </div>
-
-                <div class="info">
-                    <div class="infodiv">
-                        <div id="reponse">
-                        </div>
-                    </div>
-
-                </div>  
+                  
 
                 <div class="info">
                         <button id="oui">Je connais</button>
