--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
             <!-- QUIZ Hard -->
             <div class="block" id="blockQuizH">
                 <h1>Quiz Difficile AMPCR</h1>
-                <button id="startH">Commencer le quiz</button>
+                <div class="nav">
+                    <button id="startH">Commencer le quiz</button>
+                    <div class="info"><h5>inverser</h5><div class="choix" id="inverserH"><div class="on" id="inverserOnH"></div></div></div>
+                    <div class="info"><h5>afficher la bonne reponse</h5><div class="choix" id="erreurH"><div class="on" id="erreurOnH"></div></div></div>
+                </div>
 
                 <div class="info" id="quizStartH">
 
