mise a jour carte

--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 
                 <div class="info">
                     <div class="infodiv">
-                        
+                        <div  id="revisionC"> </div>
+                        </div>
                     </div>
                 </div>
 
